--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@
   AddType text/x-component .htc*/
 }
 
-html, body {
+html,
+body {
   height: 100%;
   /* For full height images */
 }
@@ -163,7 +164,7 @@ body {
 }
 
 .navbar > ul > li {
-  display: inline-block;
+  display: inline-block !important;
 }
 
 .navbar.navbar-transparent {
@@ -211,13 +212,18 @@ body {
 }
 @media only screen and (max-width: 768px) {
   .navbar ul {
+    display: none;
     position: absolute;
     top: 50px;
     width: 100%;
   }
 
-  .navbar ul li {
+  .navbar > ul > li {
     display: block;
-    text-align: left;
+  }
+}
+@media only screen and (min-width: 769px) {
+  .navbar > ul > li {
+    display: inline-block !important;
   }
 }
