--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ body {
   clear: both;
 }
 
+.navbar ul li {
+  display: inline-block;
+}
+
 .navbar {
   min-height: 50px;
   outline: 3px solid transparent;
@@ -136,6 +140,14 @@ body {
   background-color: white;
   -webkit-transition: background-color 2s ease 0s;
   transition: background-color 2s ease 0s;
+}
+.navbar ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  float: left;
+  z-index: 12;
+  width: 100%;
 }
 .navbar a {
   display: -webkit-box;
@@ -159,20 +171,37 @@ body {
   color: #93a4a7;
 }
 
-.button_hidden i {
-  font-size: 1.5em;
-  border: none !important;
-  background-color: transparent !important;
-  color: #93a4a7;
+.button_hidden {
+  border-style: none !important;
+  background-color: white;
+  padding-top: 4px;
 }
 
-.navbar > ul > li {
-  display: inline-block !important;
+.button_hidden i {
+  font-size: 1.5em;
+  color: #93a4a7;
+  z-index: 5000;
 }
 
 .navbar.navbar-transparent {
   background-color: transparent !important;
   border-color: transparent;
+}
+
+.main_menu a:hover {
+  background-color: #2787af;
+}
+
+.main_menu ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  float: left;
+  z-index: 12;
+}
+
+.main_menu ul li {
+  display: inline-block;
 }
 
 .navbar-brand {
@@ -200,17 +229,20 @@ body {
 @media only screen and (max-width: 768px) {
   .navbar ul {
     display: none;
-    position: absolute;
-    top: 50px;
     width: 100%;
   }
 
-  .navbar ul > li {
+  .navbar ul li {
     display: block;
+    background-color: transparent;
+  }
+
+  .navbar ul li a i {
+    visibility: hidden;
   }
 }
-@media only screen and (min-width: 769px) {
-  .navbar ul > li {
-    display: inline-block !important;
+@media only screen and (min-width: 768px) {
+  .navbar ul {
+    display: block !important;
   }
 }
