--- a/css/main.css
+++ b/css/main.css
@@ -150,10 +150,6 @@ body {
   width: 100%;
 }
 .navbar a {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -161,13 +157,14 @@ body {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
+              -ms-grid-row-align: center;
           align-items: center;
   width: 100%;
   padding: 10px;
   color: #2B4862;
   text-decoration: none;
 }
-.navbar .menu_button {
+.navbar .menu_button i {
   color: #93a4a7;
 }
 
@@ -235,10 +232,6 @@ body {
   .navbar ul li {
     display: block;
     background-color: transparent;
-  }
-
-  .navbar ul li a i {
-    visibility: hidden;
   }
 }
 @media only screen and (min-width: 768px) {
