--- a/sass/main.scss
+++ b/sass/main.scss
@@ -189,6 +189,7 @@ body {
     font-size: 1.5em;
     color: #93a4a7;
     z-index: 5000;
+
 }
 .navbar.navbar-transparent {
     // background-color: rgba(255, 255, 255, 0);
@@ -196,7 +197,7 @@ body {
     border-color: transparent;
     // transition: background-color 2s ease 0s;
 }
-.main_menu a:hover {
+.navbar a:hover {
     background-color: #2787af;
 }
 .main_menu ul {
@@ -239,7 +240,7 @@ body {
 }
 @media screen and (min-width: 320px) {}
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
     .button_hidden {
         display: none;
     }
