--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,7 @@ header {
 
 .fluid-bg {
   max-width: 100%;
-  background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner7.jpg");
-  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner7.jpg");
-  background-repeat: no-repeat;
-  background-position: top center;
+  background: url("../img/medium.jpeg") no-repeat center center;
   background-attachment: fixed;
   background-size: cover;
   color: #f5f5f5;
@@ -150,19 +147,11 @@ body {
   width: 100%;
 }
 .navbar a {
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-              -ms-grid-row-align: center;
-          align-items: center;
   width: 100%;
   padding: 10px;
   color: #2B4862;
   text-decoration: none;
+  font-size: 1.2em;
 }
 .navbar .menu_button i {
   color: #93a4a7;
@@ -171,13 +160,13 @@ body {
 .button_hidden {
   border-style: none !important;
   background-color: white;
-  padding-top: 4px;
 }
 
 .button_hidden i {
   font-size: 1.5em;
   color: #93a4a7;
   z-index: 5000;
+  font-weight: bold;
 }
 
 .navbar.navbar-transparent {
@@ -231,11 +220,20 @@ body {
 
   .navbar ul li {
     display: block;
-    background-color: transparent;
+  }
+
+  .fluid-bg {
+    background: url("../img/small.jpeg") no-repeat center center;
+    background-size: cover;
   }
 }
 @media only screen and (min-width: 992px) {
   .navbar ul {
     display: block !important;
   }
+}
+.fullscreen a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
