--- a/css/main.css
+++ b/css/main.css
@@ -25,14 +25,42 @@ header {
 }
 
 .fluid-bg {
-  max-width: 100%;
-  background: url("../img/medium.jpeg") no-repeat center center;
+  background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_large.jpeg");
+  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_large.jpeg");
+  background-repeat: no-repeat;
+  background-position: center center;
   background-attachment: fixed;
   background-size: cover;
   color: #f5f5f5;
-  padding-bottom: 35em;
-  margin-bottom: 40px;
+  padding: 10em 0;
+  margin-bottom: 0;
   height: 100%;
+}
+.fluid-bg .container {
+  bottom: 2em;
+  display: block;
+  left: 15px;
+  position: absolute;
+}
+.fluid-bg h1 {
+  font-size: 2em;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  font-weight: 400;
+  line-height: 1.1;
+}
+.fluid-bg p {
+  margin-bottom: 30px;
+}
+.fluid-bg .batton_header {
+  color: #ffffff;
+  background-color: #158cba;
+  border-color: #127ba3;
+  padding: 9px 12px 7px;
+  text-transform: uppercase;
+}
+.fluid-bg a {
+  text-decoration: none;
 }
 
 body {
@@ -54,7 +82,7 @@ body {
   float: left;
   margin: 0 0 1em;
   padding: 0 1em;
-  background: white;
+  background: transparent;
   text-align: center;
 }
 .container .cols.col-12 {
@@ -200,6 +228,12 @@ body {
 
 .content {
   margin-top: 50px;
+  padding: 20px;
+}
+
+footer ul {
+  background-color: bisque;
+  list-style-type: none;
 }
 
 @media screen and (max-width: 768px) {
@@ -223,7 +257,6 @@ body {
   }
 
   .fluid-bg {
-    background: url("../img/small.jpeg") no-repeat center center;
     background-size: cover;
   }
 }
