--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,7 +42,7 @@ header {
     background-repeat: no-repeat;
     // background-position: center center;
     // background-position: 50% bottom;
-    background-position: center center;
+    background-position: center top;
     background-attachment: fixed;
     -webkit-background-size: cover;
     background-size: cover;
