--- a/css/main.css
+++ b/css/main.css
@@ -255,9 +255,12 @@ footer ul {
   .navbar ul li {
     display: block;
   }
-
+}
+@media only screen and (max-width: 1024px) {
   .fluid-bg {
-    background-size: cover;
+    background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_medium.jpg");
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_medium.jpg");
+    color: blue;
   }
 }
 @media only screen and (min-width: 992px) {
