--- a/sass/main.scss
+++ b/sass/main.scss
@@ -298,9 +298,17 @@ footer ul {
     }
     .fluid-bg {
         // background: url('../img/small.jpeg') no-repeat center center;
-        background-size: cover;
+
     }
 }
+@media only screen and (max-width: 1024px) {
+    .fluid-bg {
+        background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)),
+    url("../img/banner_medium.jpg");
+        color: blue;
+    }
+}
+
 
 @media only screen and (min-width: 992px) {
     .navbar ul {
