--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,11 +38,11 @@ header {
 
 .fluid-bg {
     background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), // url(http://lorempixel.com/1080/610/nature);
-    url("../img/banner_large.jpeg");
+    url("../img/banner_large.jpg");
     background-repeat: no-repeat;
-    // background-position: center center;
+    background-position: center center;
     // background-position: 50% bottom;
-    background-position: center top;
+    // background-position: center top;
     background-attachment: fixed;
     -webkit-background-size: cover;
     background-size: cover;
@@ -298,17 +298,16 @@ footer ul {
     }
     .fluid-bg {
         // background: url('../img/small.jpeg') no-repeat center center;
-
     }
 }
+
 @media only screen and (max-width: 1024px) {
     .fluid-bg {
-        background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)),
-    url("../img/banner_medium.jpg");
+        background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_small.jpg");
+        height: 100%;
         color: blue;
     }
 }
-
 
 @media only screen and (min-width: 992px) {
     .navbar ul {
