img center small1

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -303,7 +303,7 @@ footer ul {
 
 @media only screen and (max-width: 1024px) {
     .fluid-bg {
-        background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_small.jpg");
+        background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_medium1.jpg");
         height: 100%;
         color: blue;
     }
