--- a/css/main.css
+++ b/css/main.css
@@ -20,10 +20,6 @@ img {
   height: auto;
 }
 
-header {
-  margin-top: -20px;
-}
-
 .fluid-bg {
   background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_large.jpg");
   background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_large.jpg");
@@ -35,6 +31,7 @@ header {
   padding: 10em 0;
   margin-bottom: 0;
   height: 100%;
+  outline: 5px solid green;
 }
 .fluid-bg .container {
   bottom: 2em;
@@ -76,7 +73,6 @@ body {
 .container {
   width: 100%;
   margin: 0 auto;
-  margin-top: 20px;
 }
 .container .cols {
   float: left;
@@ -260,7 +256,7 @@ footer ul {
   .fluid-bg {
     background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_medium1.jpg");
     background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_medium1.jpg");
-    height: 100%;
+    background-size: content;
     color: blue;
   }
 }
