--- a/sass/main.scss
+++ b/sass/main.scss
@@ -80,7 +80,7 @@ header {
     a {
         text-decoration: none;
     }
-    outline: 5px solid green;
+    // outline: 5px solid green;
 }
 
 body {
@@ -302,14 +302,14 @@ footer ul {
     }
 }
 
-@media only screen and (max-width: 1024px) {
-    .fluid-bg {
-        // background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_small1.jpg");
-        // // height: 100%;
-        // // background-size: content;
-        // color: blue;
-    }
-}
+// @media only screen and (max-width: 1024px) {
+//     .fluid-bg {
+//         // background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_small1.jpg");
+//         // // height: 100%;
+//         // // background-size: content;
+//         // color: blue;
+//     }
+// }
 
 @media only screen and (min-width: 992px) {
     .navbar ul {
