--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,7 @@ html,
 body {
     height: 100%;
     /* For full height images */
+
 }
 
 img {
@@ -54,7 +55,7 @@ header {
     .container {
         bottom: 2em;
         display: block;
-        left: 15px;
+        // left: 15px;
         position: absolute;
     }
     h1 {
@@ -302,14 +303,7 @@ footer ul {
     }
 }
 
-// @media only screen and (max-width: 1024px) {
-//     .fluid-bg {
-//         // background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url("../img/banner_small1.jpg");
-//         // // height: 100%;
-//         // // background-size: content;
-//         // color: blue;
-//     }
-// }
+
 
 @media only screen and (min-width: 992px) {
     .navbar ul {
