--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ img {
 .fluid-bg .container {
   bottom: 2em;
   display: block;
+  left: 15px;
   position: absolute;
 }
 .fluid-bg h1 {
@@ -47,15 +48,18 @@ img {
 .fluid-bg p {
   margin-bottom: 30px;
 }
-.fluid-bg .batton_header {
+.fluid-bg a {
+  text-decoration: none;
+}
+
+.button_header {
   color: #ffffff;
-  background-color: #158cba;
+  background-color: #158cba !important;
   border-color: #127ba3;
   padding: 9px 12px 7px;
   text-transform: uppercase;
-}
-.fluid-bg a {
-  text-decoration: none;
+  font-size: 0.8em;
+  z-index: 40;
 }
 
 body {
@@ -140,7 +144,7 @@ body {
   display: inline-block;
 }
 
-.navbar {
+nav {
   min-height: 50px;
   outline: 3px solid transparent;
   opacity: 1;
@@ -150,7 +154,7 @@ body {
   right: 0;
   left: 0;
   top: 0;
-  z-index: 1030;
+  z-index: 10;
   margin: auto;
   padding: 6px 5px;
   border: 2px solid;
@@ -160,34 +164,52 @@ body {
   -webkit-transition: background-color 2s ease 0s;
   transition: background-color 2s ease 0s;
 }
-.navbar ul {
-  margin: 0;
+nav ul {
+  margin: 10px;
   padding: 0;
   list-style-type: none;
-  float: left;
   z-index: 12;
   width: 100%;
 }
-.navbar a {
+nav a {
   width: 100%;
   padding: 10px;
   color: #2B4862;
   text-decoration: none;
   font-size: 1.2em;
 }
-.navbar .menu_button i {
+nav a:hover {
+  text-transform: scale(2);
+}
+nav .nav-left {
+  float: left;
+}
+nav .nav-right {
+  float: right;
+}
+nav .menu_button i {
   color: #93a4a7;
 }
 
 .button_hidden {
   border-style: none !important;
   background-color: white;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  float: right;
+  margin-bottom: 8px;
+  margin-right: 15px;
+  margin-top: 8px;
+  padding: 9px 10px;
+  position: relative;
 }
 
 .button_hidden i {
   font-size: 1.5em;
   color: #93a4a7;
-  z-index: 5000;
+  z-index: 50;
   font-weight: bold;
 }
 
@@ -196,20 +218,8 @@ body {
   border-color: transparent;
 }
 
-.navbar a:hover {
-  background-color: #2787af;
-}
-
-.main_menu ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  float: left;
-  z-index: 12;
-}
-
-.main_menu ul li {
-  display: inline-block;
+.navbar a:hover, .fluid-bg a:hover {
+  color: #93a4a7;
 }
 
 .navbar-brand {
@@ -246,7 +256,7 @@ footer ul {
     width: 100%;
   }
 
-  .navbar ul li {
+  .navbar .nav-left ul li {
     display: block;
   }
 }
