--- a/sass/mainold.scss
+++ b/sass/mainold.scss
@@ -6,7 +6,6 @@ $color_cols: transparent;
 // $color_cols: #fff6e4;
 // $color_cols: #fff6e4;
 $color_outline: transparent;
-$color_hover_link: #93a4a7;
 
 /*fonts*/
 
@@ -26,6 +25,7 @@ html,
 body {
     height: 100%;
     /* For full height images */
+
 }
 
 img {
@@ -55,7 +55,7 @@ header {
     .container {
         bottom: 2em;
         display: block;
-        left: 15px;
+        // left: 15px;
         position: absolute;
     }
     h1 {
@@ -71,22 +71,18 @@ header {
     p {
         margin-bottom: 30px;
     }
-
+    .batton_header {
+        color: #ffffff;
+        background-color: #158cba;
+        border-color: #127ba3;
+        padding: 9px 12px 7px;
+        text-transform: uppercase;
+    }
     a {
         text-decoration: none;
     }
     // outline: 5px solid green;
 }
-.button_header {
-        color: #ffffff;
-        background-color: #158cba !important;
-        border-color: #127ba3;
-        padding: 9px 12px 7px;
-        // padding: 15px 12px 7px;
-        text-transform: uppercase;
-        font-size: 0.8em;
-        z-index: 40;
-    }
 
 body {
     font: 100%/1.5em $font_0, $font_1, $font_2;
@@ -148,6 +144,7 @@ body {
         }
     }
 }
+
 .container:before,
 .container:after,
 .row:after,
@@ -180,7 +177,7 @@ nav {
     right: 0;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 1030;
     margin: auto;
     padding: 6px 5px;
     border: 2px solid;
@@ -189,11 +186,18 @@ nav {
     background-color: rgba(255, 255, 255, 1);
     transition: background-color 2s ease 0s;
     ul {
-        margin: 10px;
+        margin: 0;
         padding: 0;
         list-style-type: none;
+        float: left;
         z-index: 12;
         width: 100%;
+    }
+    .nav-right ul{
+
+    float: right !important;
+    margin-right: -15px;
+
     }
     a {
         // display: flex;
@@ -202,17 +206,9 @@ nav {
         width: 100%;
         padding: 10px;
         color: #2B4862;
+        // color: white;
         text-decoration: none;
         font-size: 1.2em;
-    }
-    a:hover{
-        text-transform:  scale(2);
-    }
-    .nav-left {
-        float: left;
-    }
-    .nav-right {
-        float: right;
     }
     .menu_button i {
         color: #93a4a7;
@@ -223,23 +219,12 @@ nav {
     border-style: none !important;
     background-color: white;
     // padding-top: 4px;
-    background-color: transparent;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    float: right;
-    margin-bottom: 8px;
-    margin-right: 15px;
-    margin-top: 8px;
-    padding: 9px 10px;
-    position: relative;
-
 }
 
 .button_hidden i {
     font-size: 1.5em;
     color: #93a4a7;
-    z-index: 50;
+    z-index: 5000;
     font-weight: bold;
 }
 
@@ -250,9 +235,23 @@ nav {
     // transition: background-color 2s ease 0s;
 }
 
-.navbar a:hover ,.fluid-bg a:hover{
-    color: $color_hover_link;
+.navbar a:hover {
+    background-color: #2787af;
 }
+
+.main_menu ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    float: left;
+    // text-transform: uppercase;
+    z-index: 12;
+}
+
+.main_menu ul li {
+    display: inline-block;
+}
+
 .navbar-brand {
     float: left;
     padding: 15px 15px;
@@ -302,22 +301,16 @@ footer ul {
         display: none;
         width: 100%;
     }
-    .navbar .nav-left ul li {
+    .navbar ul li {
         display: block;
     }
-    // // .nav-right {
-    //     float: left !important;
-    // }
     .fluid-bg {
         // background: url('../img/small.jpeg') no-repeat center center;
     }
 }
 
-// @media only screen and (min-width: 992px) {
-    // .navbar ul {
-    //     display: block !important;
-    // }
-// }
+
+
 @media only screen and (min-width: 992px) {
     .navbar ul {
         display: block !important;
